--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -9,11 +9,11 @@
     <% @tasks.each do |task| %>
     <tr class="tasks-table__row">
       <td class="tasks-table__data col-sm-4">
-        <%= link_to task.title, "#", class: "task-title-link" %>
+        <%= link_to task.title, task_path(task), class: "task-title-link" %>
       </td>
       <td class="tasks-table__data col-sm-6"><%= task.content %></td>
       <td class="tasks-table__data col-sm-2">
-        <%= link_to root_path, class: "task-link task-link--info" do  %>
+        <%= link_to task_path(task), class: "task-link task-link--info" do  %>
           <i class="fa fa-info-circle" aria-hidden="true"></i>
         <% end %>
         <%= link_to root_path, class: "task-link task-link--edit" do  %>
