--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "新規作成", new_task_path, class: "task-link task-link--new"  %>
 <table class="tasks-table table">
   <tbody>
     <tr class="tasks-table__row">
