--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,6 @@
 <div class="form">
   <%= form_with(model: @task) do |f|  %>
+    <%= render "shared/error_messages" %>
     <div class="form__item">
       <%= f.label :title, "タイトル", class: "form__label" %>
       <%= f.text_field :title, class: "form__input" %>
