--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -18,7 +18,7 @@
 </dl>
 
 <div class="task-links">
-  <%= link_to "戻る", root_path, class: "task-link task-link--back" %>
-  <%= link_to "編集", root_path, class: "task-link task-link--edit" %>
-  <%= link_to "削除", root_path, class: "task-link task-link--delete" %>
+  <%= link_to "戻る", root_path, class: "task-link task-link--back task-link--border" %>
+  <%= link_to "編集", root_path, class: "task-link task-link--edit task-link--border" %>
+  <%= link_to "削除", root_path, class: "task-link task-link--delete task-link--border" %>
 </div>
