--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -10,7 +10,7 @@
       <%= f.text_area :content, class: "form__textarea" %>
     </div>
     <div class="form__item">
-      <%= link_to "戻る", root_path, class: "task-link task-link--back" %>
+      <%= link_to "戻る", root_path, class: "task-link task-link--back task-link--border" %>
       <%= f.submit "作成", class: "form__submit" %>
     </div>
   <% end %>
