--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -43,6 +43,18 @@ a {
     opacity: .7;
     text-decoration: none;
   }
+
+  &:focus {
+    outline: none;
+    text-decoration: none;
+    color: inherit;
+  }
+}
+
+.navbar-nav > li > a:hover {
+  background: none;
+  color: inherit;
+  opacity: 0.7;
 }
 
 // ====================
@@ -52,7 +64,7 @@ a {
 header {
   color: var(--font-color);
   box-shadow: 0px 6px 8px -5px #777777;
-  margin-bottom: 100px;
+  margin-bottom: 60px;
 }
 
 .navbar {
