--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -21,4 +21,7 @@
   <%= link_to "戻る", root_path, class: "task-link task-link--back task-link--border" %>
   <%= link_to "編集", edit_task_path, class: "task-link task-link--edit task-link--border" %>
   <%= link_to "削除", @task, class: "task-link task-link--delete task-link--border", data: {"turbo-method": :delete, turbo_confirm: "削除しますか？"}  %>
+  <% if !@task.done %>
+    <%= button_to "完了", done_path(@task), method: :post, class: "task-link task-link--done task-link--border" %>
+  <% end %>
 </div>
